--- a/index.html
+++ b/index.html
@@ -3,132 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Ti, Mi Preciosa</title>
+    <title>Mensaje Especial</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #fff5f7;
-            text-align: center;
             margin: 0;
-            padding: 0;
+            background-color: black;
+            color: white;
+            text-align: center;
         }
-
-        .contenedor {
-            max-width: 600px;
+        #container {
+            max-width: 800px;
             margin: auto;
             padding: 20px;
         }
-
-        .portada {
-            margin-bottom: 20px;
-        }
-
-        .imagen {
-            max-width: 100%;
+        img {
+            width: 100%;
             height: auto;
             border-radius: 10px;
         }
-
-        .texto-principal {
-            background-color: rgba(255, 192, 203, 0.7);
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 8px;
+        .texto {
+            font-size: 1.5em;
+            margin-top: 20px;
         }
-
-        #mostrarCualidades {
-            padding: 10px 20px;
-            background-color: #ff6f91;
+        button {
+            background-color: #ff4da6;
             color: white;
             border: none;
-            border-radius: 8px;
-            font-size: 16px;
+            padding: 10px 20px;
+            font-size: 1em;
             cursor: pointer;
+            margin-top: 20px;
+            border-radius: 5px;
         }
-
-        #mostrarCualidades:hover {
-            background-color: #ff4e78;
-        }
-
-        #cualidad img {
-            max-width: 100%;
-            border-radius: 10px;
-            margin-top: 10px;
-        }
-
-        #cualidad p {
-            background-color: rgba(255, 182, 193, 0.7);
-            padding: 10px;
-            border-radius: 8px;
+        button:hover {
+            background-color: #ff1a8c;
         }
     </style>
 </head>
 <body>
 
-    <div class="contenedor">
-        <!-- Texto principal con imagen repetida -->
-        <div class="portada">
-            <img src="imagen_portada.jpg" class="imagen" alt="Portada">
-            <div class="texto-principal">
-                <p>Mi amor, desde que llegaste a mi vida, cada día es más especial.</p>
-            </div>
-        </div>
+<div id="container">
+    <img id="imagen" src="" alt="Imagen">
+    <div id="texto" class="texto"></div>
+    <button id="boton" style="display:none;">Mostrar Cualidades</button>
+</div>
 
-        <div class="portada">
-            <img src="imagen_portada.jpg"  class="imagen" alt="Portada">
-            <div class="texto-principal">
-                <p>Tu sonrisa ilumina mis días y tu amor llena mi corazón.</p>
-            </div>
-        </div>
+<script>
+    // Párrafos iniciales
+    const parrafos = [
+        "Desde que te conocí, mi vida ha cambiado para mejor...",
+        "Cada día me enseñas que el cariño verdadero se demuestra con detalles...",
+        "Eres única, y me encanta recordártelo siempre...",
+        "Gracias por existir y por permitir que forme parte de tu mundo..."
+    ];
 
-        <div class="portada">
-            <img src="imagen_portada.jpg"  class="imagen" alt="Portada">
-            <div class="texto-principal">
-                <p>No hay palabras suficientes para describir lo feliz que me haces.</p>
-            </div>
-        </div>
+    // Cualidades
+    const cualidades = [
+        "Tu sonrisa ilumina cualquier lugar.",
+        "Tu forma de ser es incomparable.",
+        "Eres muy inteligente y capaz.",
+        "Siempre tienes palabras que reconfortan.",
+        "Tu bondad es inmensa.",
+        "Tienes una belleza que enamora.",
+        "Eres muy divertida.",
+        "Tu determinación inspira.",
+        "Sabes amar de verdad.",
+        "Eres simplemente única."
+    ];
 
-        <div class="portada">
-            <img src="imagen_portada.jpg"  class="imagen" alt="Portada">
-            <div class="texto-principal">
-                <p>Hoy quiero recordarte lo increíble que eres y cuánto te amo.</p>
-            </div>
-        </div>
+    // Imagen final y frase
+    const imagenFinal = "imagen10.jpg"; // Cambia por tu ruta real
+    const fraseFinal = "Eres la persona que le da color a mis días.";
 
-        <!-- Botón -->
-        <button id="mostrarCualidades">Mostrar cualidades</button>
+    let index = 0;
+    let fase = "parrafos"; // Control de fases
 
-        <!-- Contenedor de cualidades -->
-        <div class="portada" id="cualidad"></div>
-    </div>
+    const imagen = document.getElementById("imagen");
+    const texto = document.getElementById("texto");
+    const boton = document.getElementById("boton");
 
-    <script>
-        const cualidades = [
-            { img: "imagenes/img1.jpg", texto: "Eres mi inspiración diaria 💫" },
-            { img: "imagenes/img2.jpg", texto: "Eres mi inspiración diaria 💫" },
-            { img: "imagenes/img3.jpg", texto: "Tienes la sonrisa más hermosa 😍" },
-            { img: "imagenes/img4.jpg", texto: "Tu risa alegra mi alma 🎶" },
-            { img: "imagenes/img5.jpg", texto: "Me encanta tu forma de ver la vida 🌈" },
-            { img: "imagenes/img6.jpg", texto: "Eres mi paz y mi refugio 🕊️"},
-            { img: "imagenes/img7.jpg", texto: "Cada momento contigo es un regalo 🎁" },
-            { img: "imagenes/img8.jpg", texto: "Tienes un corazón gigante ❤️" },
-            { img: "imagenes/img9.jpg", texto: "Eres la razón de mis sonrisas 😊" },
-            { img: "imagenes/img10.jpg", texto: "Eres, y siempre serás, mi gran amor ❤️" }
-        ];
+    function mostrarParrafos() {
+        if (index < parrafos.length) {
+            texto.textContent = parrafos[index];
+            imagen.style.display = "none";
+            index++;
+            setTimeout(mostrarParrafos, 8000);
+        } else {
+            fase = "cualidades";
+            index = 0;
+            boton.style.display = "inline-block";
+        }
+    }
 
-        let indice = 0;
-        document.getElementById("mostrarCualidades").addEventListener("click", function () {
-            if (indice < cualidades.length) {
-                document.getElementById("cualidad").innerHTML = `
-                    <img src="${cualidades[indice].img}" alt="Imagen">
-                    <p>${cualidades[indice].texto}</p>
-                `;
-                indice++;
-            } else {
-                alert("Ya viste todas mis cualidades para ti ❤️");
-            }
-        });
-    </script>
+    boton.addEventListener("click", function() {
+        boton.style.display = "none";
+        mostrarCualidades();
+    });
+
+    function mostrarCualidades() {
+        if (index < cualidades.length) {
+            texto.textContent = cualidades[index];
+            imagen.src = `imagen${index+1}.jpg`; // Debes tener imagen1.jpg ... imagen10.jpg
+            imagen.style.display = "block";
+            index++;
+            setTimeout(mostrarCualidades, 4000);
+        } else {
+            mostrarFinal();
+        }
+    }
+
+    function mostrarFinal() {
+        imagen.src = imagenFinal;
+        texto.textContent = fraseFinal;
+    }
+
+    // Iniciar presentación
+    mostrarParrafos();
+</script>
 
 </body>
 </html>
+
